2008-04-20  Maurice van der Pot  <griffon26@kfk4ever.com>

	* configure.in: Enabling evolution data server backend support caused
	configure to fail (bug #528971). Thanks to Robin Cook <rcook@wyrms.net> for
	noticing and providing a patch.
	* libplanner/Makefile.am: Adding -lm to LIBADD for libplanner as suggested
	by Marcin Banasiak <megabajt@pld-linux.org>, hopefully fixing bug #528582
	reported by Patryk Zawadzki <patrys@pld-linux.org>.

2008-04-16  Maurice van der Pot  <griffon26@kfk4ever.com>

	* NEWS:
	* configure.in: Version 0.14.3

2008-04-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/mime/Makefile.am: Remove the update-desktop-database line altogether,
	because as far as I can tell it's the distribution's job to run it.
	The change previously committed was incorrect. The build may have succeeded,
	but the mimeinfo cache was generated in the wrong place.

2008-04-13  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/mime/Makefile.am: Prevent failure of update-desktop-database when not
	performing make install as root.

2008-04-08  Maurice van der Pot  <griffon26@kfk4ever.com>

	* configure.in: Now requiring libxml-2.6.27 and libxslt-1.1.23, because the
	latter is the first release containing the week-in-year fix (bug #452876),
	which we need for our changes in html1_gantt.xsl committed in revision 850.

2008-04-05  Maurice van der Pot  <griffon26@kfk4ever.com>

	* Makefile.win32: Add better default PREFIX for build on Windows.
	* data/stylesheets/planner2html.xsl: Update link to homepage in exported
	HTML and underline it so people will know it's a link (bug #430477).

2008-03-26  Maurice van der Pot  <griffon26@kfk4ever.com>

	* src/planner-gantt-view.c: (gantt_view_create_widget):
	Added percent	complete column to gantt view as well.
	* src/planner-task-tree.c: (task_tree_complete_edited),
	(task_tree_add_column):
	Added range checking for percent complete column to prevent GTK warnings.
