@@ -1,3 +1,8 @@
+2008-04-29  Maurice van der Pot  <griffon26@kfk4ever.com>
+
+	* tests/Makefile.am: Fix for parallel build issue reported as bug #529045 by
+	Gilles Dartiguelongue <gilles.dartiguelongue@esiee.org>
+
 2008-04-20  Maurice van der Pot  <griffon26@kfk4ever.com>
 
 	* configure.in: Enabling evolution data server backend support caused
